[package]
name = "gossip-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
serde_json = "1.0.140"
uuid = { version = "0.8", features = ["v4", "serde"] }
clap = { version = "4.5.32", features = ["derive"] }